styles.css
.hidden-visually {
	position: absolute !important;
	top: auto !important;
	left: -100vw !important;
	width: 1px !important;
	height: 1px !important;
	margin: 0 !important;
	border: 0 !important;
	padding: 0 !important;
	overflow: hidden !important;
	clip-path: inset(50%) !important;
	white-space: nowrap !important;
}

* {
	box-sizing: border-box;
}

html {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: 100%;
	color: white;
	font-size: 16px;
	font-family: 'IBM Plex Mono', monospace;
	font-weight: 300;
	line-height: 1.25;
}

body {
	height: 100%;
	max-height: 70rem;
	margin: 0;
	background: radial-gradient(closest-side, #747D78, #364b49) fixed;
}

header {
	position: fixed;
	top: 50%;
	right: 0;
	transform: translateY(-50%);
	z-index: 1;
	max-height: 60rem;
	height: 100%;
	padding: 1.25rem 0.25rem 1.25rem 0;
	display:flex;
	justify-content: space-between;
	writing-mode: vertical-rl;
	line-height: 1;
}

header > * {
	flex: 1 1 auto;
}

header > *:not(:last-child) {
	margin-bottom: 1rem;
}

header ul {
	display: flex;
	align-items: center;
	justify-content: space-between;
	list-style-type: none;
	padding: 0;
	margin: 0;
	width: 100%;
}

header ul > li:not(:last-child) {
	margin-bottom: 1rem;
}

header a {
	color: white;
	text-decoration: none;
}

main {
	position: relative;
	margin: 5rem auto;
	max-width: 65rem;
}

h1 {
	font-size: 1.5rem;
	font-weight: 300;
	line-height: 1;
	text-transform: uppercase;
	margin: 0 0 2rem;
	z-index: 1;
	pointer-events: none;
}

@media(min-width: 40rem) {
	h1 {
		position: absolute;
		top: 6rem;
		left: 0;
		font-size: 2rem;
	}
}

h1 span {
	display: inline-block;
	background-color: black;
	padding: 0.625rem 0.375rem 0;
	pointer-events: auto;
}

h1 span:last-of-type {
	padding-bottom: 0.75rem;
}

.shards {
	position: relative;
	overflow: hidden;
	display: grid;
	margin: 0 10%;
	grid: repeat(12, 1fr) / repeat(12, 1fr);
}

img {
	display: block;
	width: 100%;
	height: auto;
	grid-area: 1 / 2 / -1 / span 9;
}

.shards [class^="shard"]::before {
	content: '';
	width: 100%;
	height: 100%;
	position: absolute;
	top: var(--b-pos-y);
	left: calc(8.3% + var(--b-pos-x));
	background-image: url("woman-in-red-shirt.jpg");
	background-size: 75%;
	background-repeat: no-repeat;
}

.shard-1 {
	grid-column: 10 / 12;
	grid-row: 1 / 6;
	clip-path: polygon(5% 4%, 94% 3%, 97% 96%, 13% 96%);
	--b-pos-x: 66%;
	--b-pos-y: -4%;
}

.shard-2 {
	grid-column: 6 / span 6;
	grid-row: 1 / -1;
	clip-path: polygon(5% 10%, 27% 3%, 94% 25%, 84% 98%, 39% 98%, 11% 98%, 4% 66%, 4% 34%);
	--b-pos-x: 4%;
	--b-pos-y: -1.75%;
}

.shard-3 {
	grid-column: 5 / span 4;
	grid-row: 6 / 11;
	clip-path: polygon(5% 3%, 96% 4%, 95% 95%, 6% 95%, 20% 30%);
	--b-pos-x: 3%;
	--b-pos-y: -4.5%;
}

.shard-4 {
	grid-column: 2 / span 4;
	grid-row: 6 / 12;
	clip-path: polygon(10% 19%, 93% 15%, 90% 88%, 13% 92%);
	--b-pos-x: 0%;
	--b-pos-y: -8%;
}

.shard-5 {
	grid-column: 1 / span 3;
	grid-row: 4 / 7;
	clip-path: polygon(9% 4%, 80% 0%, 100% 100%, 0% 100%);
	--b-pos-x: -7%;
	--b-pos-y: -4%;
}

.shard-6 {
	grid-column: 4 / span 2;
	grid-row: 3 / 5;
	clip-path: polygon(17% 35%, 75% 35%, 76% 52%, 71% 64%, 71% 88%, 24% 96%);
	--b-pos-x: 0.5%;
	--b-pos-y: -2%;
}

.shard-7 {
	grid-column: 1 / span 2;
	grid-row: 11 / -1;
	clip-path: polygon(3% 2%, 50% 25%, 97% 8%, 97% 97%, 3% 98%);
	--b-pos-x: -67%;
	--b-pos-y: 20%;
}

.shard-8 {
	grid-column: 1 / span 2;
	grid-row: 1 / 4;
	clip-path: polygon(14% 13%, 84% 12%, 86% 34%, 90% 66%, 30% 76%, 10% 79%);
	--b-pos-x: -7%;
	--b-pos-y: -40%;
}

.shard-9 {
	grid-column: 11 / -1;
	grid-row: 2 / 7;
	clip-path: polygon(9% 4%, 80% 0%, 100% 100%, 0% 100%);
	--b-pos-x: 75%;
	--b-pos-y: 8%;
}

@media not screen and (prefers-reduced-motion: reduce) {
	.shards [class^="shard"] {
		transition: clip-path 300ms ease-in-out;
	}

	.shard-1:hover {
		clip-path: polygon(5% 4%, 66.07% 13.01%, 97% 96%, 13% 96%);
	}

	.shard-2:hover {
		clip-path: polygon(25% 10%, 27% 3%, 84% 25%, 84% 98%, 45% 98%, 11% 98%, 4% 66%, 4% 34%);
	}

	.shard-3:hover {
		clip-path: polygon(5% 3%, 76.05% 16.67%, 75.05% 83.99%, 6% 95%, 20% 30%);
	}

	.shard-4:hover {
		clip-path: polygon(44.91% 31.51%, 93% 15%, 90% 88%, 33.94% 75.88%);
	}

	.shard-8:hover {
		clip-path: polygon(34% 13%, 84% 12%, 79% 34%, 90% 66%, 30% 76%, 10% 79%);
	}

	.shard-9:hover {
		clip-path: polygon(25.95% 12.00%, 78.01% 0.67%, 100% 100%, 0% 100%);
	}
}

